src/styles/Pages/Services.module.css
.container {
    width: 50%;
    padding: 20px;
    display: inline-block;
    vertical-align: top;
}

@media screen and (max-width: 1450px) {
    .container {
        width: 100%;
    }
}

.text {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 20px;
    color: #000000;
    background-color: #FFFFFF;
    border: 1px solid #06038d;
    border-radius: 0px 0px 5px 5px;
    text-align: left;
    width: 100%;
    max-width: 710px;
    padding: 30px;
    margin-left: auto;
    margin-right: auto;
}

.header {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    font-size: 22px;
    line-height: 40px;
    color: #FFFFFF;
    background-color: #06038d;
    text-align: center;
    width: 100%;
    max-width: 710px;
    margin-left: auto;
    margin-right: auto;
}

.banner {
    width: 100%;
    padding: 20px;
    background-color: rgb(0, 0, 0, 0.85);

}

.bannerText {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 25px;
    color: #FFFFFF;
    text-align: left;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
}

.bannerHeader {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 45px;
    color: #FFFFFF;
    text-align: center;
    width: 100%;
    max-width: 710px;
    margin-top: 30px;
    margin-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
}

.price {
    list-style-type: none;
    text-align: center;
    font-size: 50px;
    padding-bottom: 20px;
    font-weight: 700;
    color: green;
}

.link {
    color: rgb(139, 158, 183, 0.85);
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 45px;
    text-align: center;
    width: 100%;
    max-width: 710px;
    margin-left: auto;
    margin-right: auto;
}

.hyperlink {
    color: rgb(139, 158, 183, 0.85);
    font-weight: 700;
}

.hyperlinkwhite {
    color: rgb(139, 158, 183, 0.85);
    font-weight: 700;
}

.link:hover {
    color: #06038d;
}

.hyperlink:hover {
    color: #06038d;
}

.hyperlinkwhite:hover {
    color: white;
}

